# free_translate_api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish-container-image.yml  build-and-publish-container.yml
core/: settings.py  urls.py
index/: views.py
templates/: index.html
translate/: apps.py  views.py
