[tool.poetry]
name = "free-translate-api"
version = "0.1.0"
description = ""
authors = ["ErkamKumru"]
readme = "README.md"
packages = [{include = "free_translate_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
googletrans = "3.1.0a0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
